grammar.js
    unit: $ => optional(choice(
      $.Query,
      $.Update
    )),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression
    ),

    // TODO: This is not equivalent to the original grammar.
    // Here are some expressions that should not parse but do:
    // 1 > 2 > 3
    // 1 +
    // [110 - 117]
    binary_expression: $ => choice(
      // conditional
      prec.left(seq($._expression, field('operator', '||'), $._expression)),
      prec.left(1, seq($._expression, field('operator', '&&'), $._expression)),
      // relational
      prec.left(2, seq($._expression, field('operator', '='), $._expression)),
      prec.left(2, seq($._expression, field('operator', '!='), $._expression)),
      prec.left(2, seq($._expression, field('operator', '<'), $._expression)),
      prec.left(2, seq($._expression, field('operator', '>'), $._expression)),
      prec.left(2, seq($._expression, field('operator', '<='), $._expression)),
      prec.left(2, seq($._expression, field('operator', '>='), $._expression)),
      prec.left(2, seq($._expression, field('operator', 'IN'.toCaseInsensitiv()), $.ExpressionList)),
      prec.left(2, seq($._expression, field('operator', seq('NOT'.toCaseInsensitiv(), 'IN'.toCaseInsensitiv())), $.ExpressionList)),
      // numeric
      prec.left(3, seq($._expression, field('operator', '+'), $._expression)),
      prec.left(3, seq($._expression, field('operator', '-'), $._expression)),
      prec.left(4, seq($._expression, field('operator', '*'), $._expression)),
      prec.left(4, seq($._expression, field('operator', '/'), $._expression)),
    ),

    // [118]
    unary_expression: $ => choice(
      seq('!', $._primary_expression),
      seq('+', $._primary_expression),
      seq('-', $._primary_expression),
    ),

    // [119]
    _primary_expression: $ => choice(
      $.BrackettedExpression,
      $.BuildInCall,
      $._iri_or_function,
      $.RdfLiteral,
      $._numeric_literal,
      $.boolean_literal,
      $.VAR
    ),

    // [120]
