test/corpus/expressions.txt
=================
Unary expression
=================

SELECT ( -?a AS $x ) {}

---

(unit
  (SelectQuery
    (SelectClause
      (unary_expression
        (VAR))
      (VAR))
    (WhereClause
      (GroupGraphPattern))))

==================
Binary expression
==================

SELECT ( ?a + ?b AS $x ) {}

---

(unit
  (SelectQuery
    (SelectClause
      (binary_expression
        (VAR)
        (VAR))
      (VAR))
    (WhereClause
      (GroupGraphPattern))))


==================
Binary relational expression
==================

SELECT * {
  FILTER ( 1 = 2 )
  FILTER ( 1 != 2 )
  FILTER ( 1 < 2 )
  FILTER ( 1 <= 2 )
  FILTER ( 1 > 2 )
  FILTER ( 1 >= 2 )
  FILTER ( 1 IN ( 1, 2, 3))
  FILTER ( 1 NOT IN ( 1, 2, 3))
}

---

(unit
  (SelectQuery
    (SelectClause)
    (WhereClause
      (GroupGraphPattern
       (GroupGraphPatternSub
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (INTEGER))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (INTEGER))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (INTEGER))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (INTEGER))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (INTEGER))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (INTEGER))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (ExpressionList
                (INTEGER)
                (INTEGER)
                (INTEGER)))))
        (Filter
          (BrackettedExpression
            (binary_expression
              (INTEGER)
              (ExpressionList
                (INTEGER)
                (INTEGER)
                (INTEGER))))))))))

==================
Precedence levels
==================

SELECT ( ?a + ?b * 1 AS $x ) {}

---

(unit
  (SelectQuery
    (SelectClause
      (binary_expression
        (VAR)
        (binary_expression
          (VAR)
          (INTEGER)))
      (VAR))
    (WhereClause
      (GroupGraphPattern))))

===================
Extension function
===================

SELECT ( foo:bar(?a, 1)  AS ?x ) {}

---

(unit (SelectQuery
  (SelectClause
    (FunctionCall
      identifier: (PrefixedName
        (PNAME_NS (PN_PREFIX))
        (PN_LOCAL))
      (ArgList
        (VAR)
        (INTEGER)))
    bound_variable: (VAR))
  (WhereClause (GroupGraphPattern))))
